# shaders

./: CMakeLists.txt  config.cmake.in
prepare_shader/: CMakeLists.txt  main.cpp
src/: example.frag  example.vert  texcoord.frag  texcoord.vert
